--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -93,6 +93,15 @@ $tbgColor7: rgba(15, 15, 15, 0.85);
 $bsColor1 : rgba(0, 0, 0, 0.37);
 $bsColor2: #72ab40;
 
+//Subjects colors
+$mathColor : #AF89D2;
+$verbalColor : #F9D41B;
+$essayColor : #FF5895;
+$writingColor : #F9D41B;
+$readingColor : #F9D41B;
+$scienceColor : #51CDBA;
+$englishColor : #AF89D2;
+
 /*
 //backgrounds
 $greyBG1: #B4BAD9;
