--- a/src/components/znkCategoryStats/main.scss
+++ b/src/components/znkCategoryStats/main.scss
@@ -1,5 +1,6 @@
 @import '../../scss/imports/variables',
         '../../scss/imports/colors',
+        '../../scss/imports/fonts',
         '../../scss/imports/mixins';
 
 @import 'scss/znkCategoryStats';
