--- a/src/components/znkCategoryStats/scss/znkCategoryStats.scss
+++ b/src/components/znkCategoryStats/scss/znkCategoryStats.scss
@@ -1,50 +1,175 @@
-.category-level-wrap {
-    max-width: 467px;
 
-    div.category-level:nth-child(2n+1) {
-        float: left;
-    }
+.znk-category-stats{
+        overflow: hidden;
+        clear: both;
 
-    div.category-level:nth-child(2n) {
-        float: right;
-    }
-
-    .category-level {
-        @include dimension(200px, 88px);
-        @include display-flex;
-        @include flex-middle;
-        margin-bottom: 20px;
-
-        .icon-wrap {
-            display: inline-block;
-            margin-right: 10px;
+        .category-wrapper:nth-child(2n + 1){
+            float: left;
         }
 
-        .category-data {
-            @include text-style(14px, #757a83, Lato, $regularFontWeight);
-            display: inline-block;
-            text-align: left;
+        .category-wrapper:nth-child(2n + 2){
+            float: right;
+        }
 
-            .category-level-name {
-                max-width: 170px;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                overflow: hidden;
-                margin-bottom: 10px;
+        .category-wrapper {
+            @include dimension(300px, auto);
+
+            .category-short-name {
+                @include dimension(30px, 30px);
+                @include text-style(14px, $fcColor2, Lato, $regularFontWeight);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 50%;
+                margin-right: 15px;
+                float: left;
             }
 
-            .level {
-                font-size: 10px;
-                font-weight: $lightFontWeight;
+            &.math, &.mathlvl1, &.mathlvl2 {
+                .category-short-name {
+                    background-color: $mathColor;
+                }
+            }
+
+            &.verbal{
+                .category-short-name {
+                    background-color: $verbalColor;
+                }
+            }
+
+            &.essay{
+                .category-short-name {
+                    background-color: $essayColor;
+                }
+            }
+
+            .category-name {
+                @include dimension(250px, auto);
+                @include text-style(18px, $fcColor6, Lato, $regularFontWeight);
+                display: inline-block;
                 text-align: left;
-                text-transform: uppercase;
-                margin-top: 10px;
+                padding-top: 5px;
             }
 
-            .progress-wrap {
-                width: 175px;
-                height: 5px;
+            .progress-details-wrapper {
+                @include dimension(255px, auto);
+                margin: 11px auto;
+                padding-left: 45px;
+                display: flex;
+                flex-direction: column;
+
+                .subject-progress-wrapper {
+                    clear: both;
+                    position: relative;
+
+                    .progress-wrap {
+                        @include dimension(250px, 7px);
+                        background-color: $bgColor6;
+                        border: 1px solid $bcColor8;
+
+                        .progress{
+                            transition: 0.5s;
+                        }
+                    }
+
+                    .level-white-line {
+                        @include dimension(1px, 7px);
+                        background-color: $bgColor6;
+                        display: inline-block;
+                        position: absolute;
+                        bottom: 1px;
+                    }
+
+                    .line1 {
+                        left: 75px;
+                    }
+                    .line2 {
+                        left: 137px;
+                    }
+                    .line3 {
+                        left: 187px;
+                    }
+                    .line4 {
+                        left:222px;
+                    }
+                }
+
+                .level-status-wrapper {
+                    span{
+                        text-align: center;
+                        @include text-style(12px, $fcColor6, Quicksand, $regularFontWeight);
+                        margin-bottom: 3px;
+                    }
+
+                    span:first-child {
+                        float: left
+                    }
+
+                    span:nth-child(2) {
+                        float: right;
+                        margin-right: 3px;
+                    }
+                }
+
+                .average-time-wrapper {
+                    margin-top: 7px;
+                    .znkCategoryStats-clock-icon{
+                        float: left;
+                        margin-right: 8px;
+                        width: 11px;
+                        height: auto;
+                    }
+
+                    span {
+                        @include text-style(13px, $fcColor9, Quicksand, $regularFontWeight);
+                        line-height: 13px;
+                        float: left;
+                    }
+                }
+
+                .specific-categories{
+                    text-align: left;
+                    margin-top: 15px;
+                    display: flex;
+                    align-items: baseline;
+                    cursor: pointer;
+                    position: relative;
+                    .show-details-title{
+                        @include text-style(14px, $fcColor5, Lato, $regularFontWeight);
+                    }
+                    .dropdown-arrow-icon{
+                        width: 9px;
+                        height: 9px;
+                        transform: rotate(-90deg);
+                        margin-left: 5px;
+                        svg{
+                            width: 9px;
+                            height: 9px;
+                        }
+
+                        svg *{
+                            stroke: $fcColor5;
+                            stroke-width: 25px;
+                        }
+                    }
+
+                    md-menu.specific-menu {
+                        position: relative;
+                        .menu-btn{
+                            display: flex;
+                            align-items: baseline;
+                        }
+
+                    }
+
+                }
+            }
+
+            .no-data-title{
+                @include text-style(14px, $fcColor6, Lato, $lightFontWeight);
+                width: 152px;
+                margin-top: 20px;
             }
         }
     }
-}
+
