--- a/src/components/znkCategoryStats/znkCategoryStats.template.html
+++ b/src/components/znkCategoryStats/znkCategoryStats.template.html
@@ -1,14 +1,38 @@
-<div class="category-level-wrap">
-    <div class="category-level"
-         ng-repeat="(key, generalCategory) in vm.generalCategories">
-        <div class="category-data">
-            <div class="category-level-name">{{generalCategory.name}} </div>
-            <div znk-progress-bar
-                 progress-width="{{generalCategory.progress}}"
-                 progress-value="{{generalCategory.progress}}"
-                 show-progress-value="false">
+<div class="znk-category-stats" ng-if="vm.generalCategories.length">
+    <div class="category-wrapper"
+         subject-id-to-attr-drv="vm.subjectId"
+         ng-repeat="(key, category) in vm.generalCategories"
+         translate-namespace="ZNK_CATEGORY_SUMMARY">
+
+        <div class="category-short-name">{{category.shortName}}</div>
+        <div class="category-name">{{category.name}}</div>
+
+        <div class="progress-details-wrapper">
+            <div class="level-status-wrapper">
+                <span translate=".CATEGORY_MASTERY" translate-values="{categoryProgress: category.progress}"></span>
+                <span>{{category.masteryLevel | uppercase}}</span>
             </div>
-            <div class="level">{{generalCategory.progress}}% {{'ZNK_CATEGORY_SUMMARY.MASTERY' | translate}}</div>
+
+            <div class="subject-progress-wrapper">
+                <znk-progress-bar progress-width="{{category.progress}}"></znk-progress-bar>
+                <span class="level-white-line line1"></span>
+                <span class="level-white-line line2"></span>
+                <span class="level-white-line line3"></span>
+                <span class="level-white-line line4"></span>
+            </div>
+
+            <div class="average-time-wrapper">
+                <svg-icon name="znkCategoryStats-clock-icon"></svg-icon>
+                <span translate=".AVERAGE_TIME_CATEGORY" translate-values="{avgTime: category.avgTime}"></span>
+            </div>
         </div>
+    </div>
+
+    <div class="category-wrapper"
+         subject-id-to-attr-drv="vm.subjectId"
+         ng-repeat="(categoryId, categoryObj) in performanceData[subjectId].noDataItems">
+        <div class="category-short-name">{{categoryObj.shortName[0]}}</div>
+        <div class="category-name">{{categoryObj.name | cutString:20}}</div>
+        <div class="no-data-title" translate=".NO_DATA"></div>
     </div>
 </div>
