code review fixes

--- a/src/components/znkCategoryStats/znkCategoryStats.template.html
+++ b/src/components/znkCategoryStats/znkCategoryStats.template.html
@@ -8,7 +8,7 @@
 
         <div class="progress-details-wrapper">
             <div class="level-status-wrapper">
-                <span translate=".CATEGORY_MASTERY" translate-values="{categoryProgress: vm.category.progress}"></span>
+                <span translate=".CATEGORY_ACCURACY" translate-values="{categoryProgress: vm.category.progress}"></span>
             </div>
 
             <div class="subject-progress-wrapper">
