change subjectId to level1CategoryId

--- a/src/components/znkCategoryStats/znkCategoryStats.template.html
+++ b/src/components/znkCategoryStats/znkCategoryStats.template.html
@@ -1,6 +1,6 @@
 <div class="znk-category-stats">
     <div class="category-wrapper"
-         subject-id-to-attr-drv="vm.subjectId"
+         subject-id-to-attr-drv="vm.level1CategoryId"
          translate-namespace="ZNK_CATEGORY_SUMMARY">
 
         <div class="category-short-name">{{vm.category.shortName}}</div>
