--- a/src/components/znkCategoryStats/scss/znkCategoryStats.scss
+++ b/src/components/znkCategoryStats/scss/znkCategoryStats.scss
@@ -3,16 +3,10 @@
         overflow: hidden;
         clear: both;
 
-        .category-wrapper:nth-child(2n + 1){
-            float: left;
-        }
-
-        .category-wrapper:nth-child(2n + 2){
-            float: right;
-        }
-
         .category-wrapper {
             @include dimension(300px, auto);
+            display: flex;
+            padding: 15px;
 
             .category-short-name {
                 @include dimension(30px, 30px);
@@ -22,7 +16,6 @@
                 align-items: center;
                 border-radius: 50%;
                 margin-right: 15px;
-                float: left;
             }
 
             &.math, &.mathlvl1, &.mathlvl2 {
@@ -43,20 +36,18 @@
                 }
             }
 
-            .category-name {
-                @include dimension(250px, auto);
-                @include text-style(18px, $fcColor6, Lato, $regularFontWeight);
-                display: inline-block;
-                text-align: left;
-                padding-top: 5px;
-            }
-
             .progress-details-wrapper {
                 @include dimension(255px, auto);
-                margin: 11px auto;
-                padding-left: 45px;
                 display: flex;
                 flex-direction: column;
+
+                .category-name {
+                    @include dimension(250px, auto);
+                    @include text-style(18px, $fcColor6, Lato, $regularFontWeight);
+                    display: inline-block;
+                    text-align: left;
+                    padding-top: 5px;
+                }
 
                 .subject-progress-wrapper {
                     clear: both;
