--- a/src/components/eTutoring/main.scss
+++ b/src/components/eTutoring/main.scss
@@ -6,4 +6,5 @@
 'components/eTutoringContactUs/eTutoringContactUs',
 'components/moduleExerciseItem/moduleExerciseItem',
 'components/moduleExercisePane/moduleExercisePane',
+'components/moduleExercisePane/homework-pane',
 'scss/etutoring';
