--- a/src/components/znkExercise/toolbox/core/znkExerciseToolBoxDirective.template.html
+++ b/src/components/znkExercise/toolbox/core/znkExerciseToolBoxDirective.template.html
@@ -1,3 +1,3 @@
-<znk-exercise-draw-tool settings="$ctrl.settings.drawing">
+<znk-exercise-draw-tool ng-if="isDrawEnabled" settings="$ctrl.settings.drawing">
 </znk-exercise-draw-tool>
 
