--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -95,6 +95,8 @@ $bsColor2: #72ab40;
 
 //Subjects colors
 $mathColor : #AF89D2;
+$mathLvl1Color : #8e6fab;
+$mathLvl2Color : #8e6fab;
 $verbalColor : #F9D41B;
 $essayColor : #FF5895;
 $writingColor : #F9D41B;
