--- a/src/components/eTutoring/components/eTutoringContactUs/_eTutoringContactUs.scss
+++ b/src/components/eTutoring/components/eTutoringContactUs/_eTutoringContactUs.scss
@@ -102,11 +102,11 @@ md-dialog.e-tutoring-contact-us-modal {
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                .calendar-icon{
+                .etutoring-calendar-icon{
                     stroke: #ffffff;
                 }
 
-                .calendar-icon *{
+                .etutoring-calendar-icon *{
                     fill: #ffffff;
                     width: 35px;
                     height: 35px;
