--- a/src/components/eTutoring/components/eTutoringContactUs/eTutoringContactUs.template.html
+++ b/src/components/eTutoring/components/eTutoringContactUs/eTutoringContactUs.template.html
@@ -1,7 +1,7 @@
 <md-dialog ng-cloak class="e-tutoring-contact-us-modal" translate-namespace="E_TUTORING_CONTACT_US">
     <md-toolbar>
         <div class="close-popup-wrap" ng-click="vm.closeDialog()">
-            <svg-icon name="app-close-popup"></svg-icon>
+            <svg-icon name="etutoring-close-icon"></svg-icon>
         </div>
     </md-toolbar>
     <md-dialog-content ng-switch="!!vm.showSuccess">
@@ -12,7 +12,7 @@
     <div class="top-icon-wrap">
         <div class="top-icon">
             <div class="round-icon-wrap">
-                <svg-icon name="app-calendar-icon"></svg-icon>
+                <svg-icon name="etutoring-calendar-icon"></svg-icon>
             </div>
         </div>
     </div>
