--- a/src/components/eTutoring/components/moduleExerciseItem/moduleExerciseItem.template.html
+++ b/src/components/eTutoring/components/moduleExerciseItem/moduleExerciseItem.template.html
@@ -7,16 +7,17 @@
                 'in-progress': module.moduleSummary[exerciseTypeId][exerciseId].status===exerciseStatusEnum.ACTIVE.enum,
                 'completed': module.moduleSummary[exerciseTypeId][exerciseId].status===exerciseStatusEnum.COMPLETED.enum}">
 
-    <div class="icon-wrap" >
+    <div class="icon-wrap"  >
             <svg-icon name="etutoring-exercise-icon" class="svg-icon-wrap"
                       ng-if="exerciseTypeId!==exerciseTypeEnum.LECTURE.enum && activeViewObj.view === ETutoringViewsConst.LESSON">
             </svg-icon>
             <svg-icon name="etutoring-slides-icon" class="svg-icon-wrap"
                       ng-if="exerciseTypeId===exerciseTypeEnum.LECTURE.enum &&  activeViewObj.view === ETutoringViewsConst.LESSON"">
             </svg-icon>
-            <svg-icon name="{{assignmentIconName}}"
+            <svg-icon name="{{subjectIcon}}"
+                      subject-id-to-attr-drv="subjectId"
+                      ng-class="svgWrapperClass"
                       class="svg-icon-wrap"
-                      ng-class="::{'math-no-calc': !exercise.calculator && exercise.subjectId === subjectEnum.MATH.enum && assignmentIconName}"
                       ng-if="eTutoringView() === ETutoringViewsConst.PRACTICE">
             </svg-icon>
     </div>
