--- a/src/components/eTutoring/main.scss
+++ b/src/components/eTutoring/main.scss
@@ -3,6 +3,7 @@
 './src/scss/imports/mixins',
 'components/etutoringActionBar/etutoring-action-bar',
 'components/etutoringStudentNavigationPane/etutoringStudentNavigationPane',
+'components/etutoringStudentNavigationPane/etutoringStudentPracticeView',
 'components/eTutoringContactUs/eTutoringContactUs',
 'components/moduleExerciseItem/moduleExerciseItem',
 'components/moduleExercisePane/moduleExercisePane',
