added "follow scroll" to pager

--- a/src/components/znkExercise/core/template/znkExercisePagerDrv.html
+++ b/src/components/znkExercise/core/template/znkExercisePagerDrv.html
@@ -1,4 +1,4 @@
-<znk-scroll>
+<znk-scroll actions="scrollActions">
     <div class="pager-items-wrapper">
         <div class="pager-item noselect"
              ng-repeat="question in questions"
