--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -19,6 +19,8 @@ $fcColor17 : #659938;
 $fcColor18 : #CACBCC;
 $fcColor19 : #D1D2D2;
 $fcColor20 : #E1E1E1;
+$fcColor21 : #959595;
+$fcColor22 : #dddddd;
 
 //background color
 $bgColor1: #ff6766;
@@ -60,6 +62,8 @@ $bgColor36 : rgba(255, 255, 255, 0.8);
 $bgColor37 : #76b63e;
 $bgColor38 : #AF89D2;
 $bgColor39 : #F3CF19;
+$bgColor40 : #f8f8f8;
+$bgColor41 : #a8999;
 
 //border color
 $bcColor1: #87ca4d;
