--- a/src/components/eTutoring/components/etutoringActionBar/_etutoring-action-bar.scss
+++ b/src/components/eTutoring/components/etutoringActionBar/_etutoring-action-bar.scss
@@ -100,7 +100,7 @@ etutoring-action-bar {
 
                 &[disabled="disabled"]{
                     opacity: 0.5;
-                    color: $fcColor2; !important;//overriding material
+                    color: $fcColor2 !important;//overriding material
 
                     &.primary:hover{
                         background: $fcColor5;
