--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -21,6 +21,7 @@ $fcColor19 : #D1D2D2;
 $fcColor20 : #E1E1E1;
 $fcColor21 : #959595;
 $fcColor22 : #dddddd;
+$fcColor23 : #f2f2f2;
 
 //background color
 $bgColor1: #ff6766;
@@ -64,6 +65,14 @@ $bgColor38 : #AF89D2;
 $bgColor39 : #F3CF19;
 $bgColor40 : #f8f8f8;
 $bgColor41 : #a8999;
+$bgColor42 : #cacaca;
+$bgColor43 : #f2f2f2;
+$bgColor44 : #c2c2c2;
+$bgColor45 : #acacac;
+$bgColor46 : #fcfcfc;
+$bgColor47 : #4f4d4d;
+$bgColor48 : #f9d623;
+$bgColor49 : #a07ec1;
 
 //border color
 $bcColor1: #87ca4d;
@@ -83,6 +92,8 @@ $bcColor14 : #acacac;
 $bcColor15 : #e1e1e1;
 $bcColor16 : #c2c2c2;
 $bcColor17 : rgba(0,0,0,0.54);
+$bcColor18 : rgba(0,0,0,0.54);
+$bcColor19 : #f2f2f2;
 
 //background with transparency
 $tbgColor1: rgba(0,0,0,0.7);
@@ -96,6 +107,7 @@ $tbgColor7: rgba(15, 15, 15, 0.85);
 //box shadow
 $bsColor1 : rgba(0, 0, 0, 0.37);
 $bsColor2: #72ab40;
+$bsColor3: #ffffff;
 
 //Subjects colors
 $mathColor : #AF89D2;
