--- a/src/components/eTutoring/components/moduleExercisePane/_homework-pane.scss
+++ b/src/components/eTutoring/components/moduleExercisePane/_homework-pane.scss
@@ -7,11 +7,11 @@
         .assignment-title-wrapper.pass-due-date {
             position: relative;
             .module-name {
-                color: #ff6766;
+                color: $fcColor10;
             }
 
             .overdue-assignment-title {
-                @include text-style(14px, #ff6766, Lato, $regularFontWeight);
+                @include text-style(14px, $fcColor10, Lato, $regularFontWeight);
                 display: block;
                 position: absolute;
                 right: 0;
@@ -28,13 +28,13 @@
                     height: 40px;
                     width: auto;
                 }
-                &.english-topic-icon {svg * {fill: #f9d623;}}
-                &.math-topic-icon {svg * {fill: #a07ec1;}}
+                &.english-topic-icon {svg * {fill: $bgColor48;}}
+                &.math-topic-icon {svg * {fill: $bgColor49;}}
             }
         }
 
         .topic-name{
-            @include text-style(16px, #4f4d4d, Quicksand, $regularFontWeight, null, capitalize);
+            @include text-style(16px,$fcColor6, Quicksand, $regularFontWeight, null, capitalize);
             text-align: center;
             height: 20px;
 
