--- a/src/components/eTutoring/components/moduleExercisePane/_moduleExercisePane.scss
+++ b/src/components/eTutoring/components/moduleExercisePane/_moduleExercisePane.scss
@@ -44,7 +44,7 @@
                 width: 100%;
                 min-height: 80%;
                 margin: 15px auto 0;
-                background-color: #f9f9f9;
+                background-color: $bgColor32;
                 box-sizing: border-box;
 
                 .content-not-assigned {
