--- a/src/components/eTutoring/scss/_etutoring.scss
+++ b/src/components/eTutoring/scss/_etutoring.scss
@@ -12,7 +12,7 @@
     width: 100%;
     height: 100%;
     .msg {
-        @include text-style(20px, #757a83, Quicksand, $regularFontWeight);
+        @include text-style(20px, $fcColor9, Quicksand, $regularFontWeight);
         line-height: 40px;
         text-align: center;
         z-index: 2;
@@ -28,11 +28,11 @@
             width: 100%;
 
             .big-title {
-                @include text-style(22px, #4f4d4d, Quicksand, $semiBoldFontWeight);
+                @include text-style(22px, $fcColor6, Quicksand, $semiBoldFontWeight);
                 margin-bottom: 50px;
             }
             .sub-title {
-                @include text-style(18px, #4f4d4d, Quicksand, $regularFontWeight);
+                @include text-style(18px, $fcColor6, Quicksand, $regularFontWeight);
                 line-height: 40px;
             }
             .btn-wrap {
@@ -62,7 +62,7 @@
         }
 
         .app-e-tutoring-container {
-            background: #ffffff;
+            background: $bgColor6;
             width: 745px;
             margin-left: 20px;
             height: 100%;
